k8s_3_hw/deployment/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: db-mysql
spec:
  selector:
    app: db-mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-s-set
spec:
  selector:
    matchLabels:
      app: db-mysql
  serviceName: "mysql-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: db-mysql
    spec:
      containers:
        - name: db-mysql
          image: mysql
          ports:
            - containerPort: 3306
              name: db-mysql-port
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-mysql-volume
  volumeClaimTemplates:
    - metadata:
        name: db-mysql-volume
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
