k8s_3_hw/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-3-hw-service
spec:
  selector:
    app: k8s-3-hw
  ports:
  - port: 8000
    targetPort: 8000
  type: NodePort
